--- a/css/mysite.css
+++ b/css/mysite.css
@@ -1,24 +1,16 @@
 @charset "UTF-8";
 /* CSS Document */
+
 body {
 	margin:0 auto;
-	padding:0;
+	padding:0 auto;
+	height: 100%;
 	font-family: Helvetica, Arial, "sans-serif";
-/*
-	position: fixed;
-	background-image: url("image/front1.png");
-	background-attachment:scroll;
-	background-position:top;
-	background-repeat: no-repeat;
-	height: 700px;
-*/
+
 }
 
 
-.main{
-	margin: 0 auto;
-	z-index: -1;
-}
+
 .birdlogo{
 	position: fixed;
 	margin-left: 50px;
@@ -53,25 +45,24 @@ body {
 	transition: none;
 }
 
-/*
-.img-area img.img-front:hover{
-	opacity:0;
-	cursor:pointer;
-}
+
 */
 /*********img-area-end**********/
+
+/************** manu ******************/
+.lefthead1 {
+	position:fixed;
+	z-index: 1;
+}
 .lefthead {
 	list-style: none;
 	font-family: Arial;
-	font-size: 14px;
 	font-weight:700;
 	float:left;		
-	margin-top: 150px;
+	margin-top: 300px;
 	margin-left: 30px;
 	position: fixed;
 	left: 30px;
-	top: 150px;
-	z-index: 1;
 	}
 .lefthead .secondmanu{
 	list-style: none;
@@ -80,27 +71,12 @@ body {
 	line-height: 18px;
 	font-weight: 400;
 }
-/*
-.lefthead>ul{
-	display: flex;
-    justify-content: space-between;
+.tophead1 {
+	margin-left:330px;
+	margin-top: 80px;
+	position:fixed;
+	z-index: 1;
 }
-.lefthead>ul>li{
-    width: 10%;
-    position: relative;
-}
-.lefthead ul li a {
-	display: block;
-}
-.lefthead>ul>li>ul{
-	transition: height 2s ease;
-	overflow:hidden;
-	position:absolute;
-	height: 0;
-	
-}
-*/
-
 .tophead li{
 	list-style: none;
 	float:left;
@@ -112,12 +88,8 @@ body {
 	z-index: 1;
 }
 
-.tophead1 {
-	margin-left:280px;
-	margin-top: 80px;
-	position:fixed;
-	z-index: 1;
-}
+/*************** manu end ********************/
+
 article{
 	font-family: Helvetica, Arial, "sans-serif";
 	font-size: 14px;
@@ -128,27 +100,32 @@ main{
 	padding: 0 auto;
 	font-family: Arial;
 	font-size: 14px;
-	
 	background-image: url(../image/front1.png);
 	background-attachment:scroll;
 	background-position:top;
-	background-repeat:no-repeat;
+	background-repeat: no-repeat;
+	/*position: relative;
+	min-height: 100vh;
+	min-width: 100vh;*/
+	padding-bottom: 0px;
 	z-index: -1;
-
 }
 
 footer {
 	font-family: Arial;
 	font-size: 12px;
-	margin-bottom: 20px;
+	margin:0;
 	text-align: center;
-	position: absolute;
+	padding:0;
+	clear: both;
 	width: 100%;
 	z-index:1;
+	bottom: 0;
+	position: fixed;
 	
 }
 .bgp {
-	width:1200px;
+	max-width:1200px;
 	height:700px;
 	margin:0 auto;
 /*
@@ -188,12 +165,12 @@ a:activated {
 /**************主页结束**************/
 .about{
 	margin: 0 auto;
-	width:1200px;
-	height: 1000px;
+	min-width:100vh;
+	min-height: 100vh;
+	text-align: center;
 	padding-top:200px;
 	padding-left: 300px;
 	
-/*	position:relative;*/
 }
 .portfoliopic{
 	float:left;
