--- a/css/mysite.css
+++ b/css/mysite.css
@@ -173,6 +173,7 @@ a:activated {
 	padding-left: 300px;
 	
 }
+/***************** 主页照骗 *************/
 .portfoliopic{
 	float:left;
 	width:200px;
@@ -182,13 +183,23 @@ a:activated {
 	position: fixed;
 	z-index: 1;
 }
+.portfoliopic1{
+	float:left;
+	width:200px;
+	height: 254px;
+	margin-left: 0 auto;
+	background-image: url(../image/about/about.jpg);
+	position: fixed;
+	z-index: 1;
+}
 .aboutinfo{
 	float: left;
 	width: 0 auto;
-	height:400px;
+	height:100%;
 	margin-left:220px;
-	padding-top:5px;
-	line-height: 5px;
+	margin-bottom: 50px;
+	border-bottom: 20px;
+	line-height: 16px;
 	position: fixed;
 	z-index: 1;	
 }
