--- a/css/mysite.css
+++ b/css/mysite.css
@@ -111,6 +111,23 @@ main{
 	z-index: -1;
 	opacity:0.6；
 }
+.bbox1{
+	margin: 0 auto;
+	padding: 0 auto;
+	font-family: Arial;
+	font-size: 14px;
+	background-image: url(../image/front2-1.png);
+	/*background-image: url(../image/front1.png);*/
+	background-attachment:scroll;
+	background-position:top;
+	background-repeat: no-repeat;
+	/*position: relative;
+	min-height: 100vh;
+	min-width: 100vh;*/
+	padding-bottom: 0px;
+	z-index: -1;
+	opacity:0.6；
+}
 
 footer {
 	font-family: Arial;
@@ -223,5 +240,5 @@ a:activated {
 	margin-top: 55px;
 	line-height: 18px;
 	position: fixed;
-	overflow:auto;
+	overflow: auto;
 }
