--- a/css/mysite.css
+++ b/css/mysite.css
@@ -13,10 +13,10 @@ body {
 
 .birdlogo{
 	position: fixed;
-	margin-left: 50px;
+	/*margin-left: 50px;
 	margin-top: 50px;
 	width: 180px;
-	height: 110px;
+	height: 110px;*/
 }
 
 .img-back:hover{
@@ -52,24 +52,26 @@ body {
 /************** manu ******************/
 .lefthead1 {
 	position:fixed;
-	z-index: 1;
+	z-index: 1;}
+ul li {
+	list-style-type: none;
 }
 .lefthead {
 	list-style: none;
 	font-family: Arial;
 	float:left;		
-	margin-top: 300px;
+	margin-top: 150px;
 	margin-left: 30px;
 	position: fixed;
 	left: 30px;
 	}
-.lefthead .secondmanu{
+/*.lefthead .secondmanu{
 	list-style: none;
 	font-family: Arial;
 	font-size: 12px;
 	line-height: 18px;
 	font-weight: 400;
-}
+}*/
 .tophead1 {
 	margin-left:330px;
 	margin-top: 80px;
@@ -115,14 +117,17 @@ main{
 	padding: 0 auto;
 	font-family: Arial;
 	font-size: 12px;
-	background-image: url(../image/front2-1.png);
+	padding-bottom: 0px;
+
+	/*background-image: url(../image/front2-1.png);*/
 	background-attachment:scroll;
 	background-position:top;
 	background-repeat: no-repeat;
-	/*position: relative;
-	min-height: 100vh;
-	min-width: 100vh;*/
-	padding-bottom: 0px;
+	-webkit-background-size: cover; 
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+
 	z-index: -1;
 	opacity:0.6；
 }
