--- a/css/mysite.css
+++ b/css/mysite.css
@@ -205,7 +205,7 @@ a:activated {
 
 .writingfront {
 	width: 660px;
-	height:100%;
+	height:auto;
 	margin-left:50px;
 	line-height: 16px;
 	position: fixed;
@@ -223,7 +223,7 @@ a:activated {
 }
 .container {
 	width: 660px;
-	height:50px;
+	height:auto;
 	margin-left:50px;
 	line-height: 16px;
 	position: relative;
